--- a/index.html
+++ b/index.html
@@ -196,9 +196,7 @@ Additional Classes:
                         <div class="nk-box-3 text-center">
                             <h2>Who we are</h2>
                             <div class="nk-gap mnt-5"></div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur fugit dolorem
-                                dignissimos assumenda quidem necessitatibus eum tempore fuga porro numquam nulla eaque
-                                alias, repellat, ipsam quod? Veritatis reiciendis aliquam a.</p>
+                            <p></p>
                             <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit">
                         </div>
                         <div class="nk-gap-2"></div>
@@ -214,42 +212,54 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/1.png" alt="" class="nk-img-fit">
+                                <a href="http://www.nunyamedia.netlify.app" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/1.png" alt="nunyamedia" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/2.png" alt="" class="nk-img-fit">
+                                <a href="http://www.theinterbellum.com" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/2.png" alt="theinterbellum" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/3.png" alt="" class="nk-img-fit">
+                                <a href="http://www.nunyamarketing.com" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/3.png" alt="nunyamarketing" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/4.png" alt="" class="nk-img-fit">
+                                <a href="http://www.whosagoodboy.uk" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/4.png" alt="goodboy" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="" class="nk-img-fit">
+                                <a href="http://www.nunyagroup.com" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="nunyagroup.com" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <img src="assets/images/Partner Logos/W.SHADOW/6.png" alt="" class="nk-img-fit">
+                                <a href="http://www.unitfifteen.uk" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/6.png" alt="unitfifteen" class="nk-img-fit">
+                                </a>
                             </div>
                         </div>
                     </div>
